refactor: 加入文章: 在 csrf token 的保护之下
加入文章: 在 csrf token 的保护之下

--- a/src/about.html
+++ b/src/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: ""
+description: "这个人真的很懒。"
 header-img: public/assets/img/cement.png
 multilingual: true
 ---
